--- a/line-of-sight-software-app-mk2/frontend/src/app/app.component.scss
+++ b/line-of-sight-software-app-mk2/frontend/src/app/app.component.scss
@@ -7,7 +7,7 @@
     'header'
     'main';
     gap: 10px;
-    grid-template-rows: 90px auto 20px;
+    grid-template-rows: auto auto 20px;
 }
 
 .action-btn-grp {
